Fixed modal footer spacing

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -60,7 +60,7 @@
 }
 
 .modal__footer {
-  padding: 0 16px;
+  padding: 0 16px 16px 16px;
 }
 
 .modal--open {
